@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
-- Removed extremely long line from traceback in CPS.
-New internal features:
+- Removed extremely long line from traceback in New.
+- #872: default section/workspaces were created with unicode titles.
+CPS internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
